# rustrace

./: Cargo.toml  LICENSE  README.md  vector_in_plane.ggb
src/: camera.rs  hit.rs  hittable.rs  light.rs  main.rs  material.rs  onb.rs  pathtracer.rs  ray.rs  renderer.rs  sphere.rs  texture.rs  vec3.rs
src/gfx/: material.rs  texture.rs
src/hittables/: aabb.rs  bvh.rs  bvh_arena.rs  bvh_pointers.rs  mesh.rs  primitives.rs  volume.rs
src/math/: onb.rs  pdf.rs  quat.rs  transform.rs  vec3.rs
