[package]
name = "raytrace"
version = "0.1.0"
authors = ["DasCapschen <3923406+DasCapschen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[dependencies.sdl2]
version = "0.32.2"
features = ["gfx"]