[package]
name = "raytrace"
version = "0.1.0"
authors = ["DasCapschen <3923406+DasCapschen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand = "0.7.3"
scoped_threadpool = "0.1.9"
oidn = "1.1.0"

[dependencies.sdl2]
version = "0.32.2"
features = ["gfx"]
