[package]
name = "raytrace"
version = "0.1.0"
authors = ["DasCapschen <3923406+DasCapschen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand = "0.7.3"
rayon = "1.5.0"
oidn = "=1.2.1"  #this is on purpose 1.2.1, because API change in 1.3.0!
image2 = "0.11.3"
tobj = "2.0.2"

[dependencies.sdl2]
version = "0.34.3"
features = ["gfx"]
